force-app/main/default/objects/auara_UmbralesCompromiso__c/auara_UmbralesCompromiso__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Utilizados en el cálculo de estimados para el objeto Daily Commitments</description>
    <label>Umbrales Compromiso</label>
</CustomObject>