force-app/main/default/objects/auara_UmbralesCompromiso__c/fields/auara_CoeficienteReuniones__c.field-meta.xml
<CustomField>
    <fullName>auara_CoeficienteReuniones__c</fullName>
    <label>Coeficiente Reuniones</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>