force-app/main/default/objects/auara_UmbralesCompromiso__c/fields/auara_CoeficienteVisitas__c.field-meta.xml
<CustomField>
    <fullName>auara_CoeficienteVisitas__c</fullName>
    <label>Coeficiente Visitas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>