force-app/main/default/objects/auara_UmbralesCompromiso__c/fields/auara_TargetReuniones__c.field-meta.xml
<CustomField>
    <fullName>auara_TargetReuniones__c</fullName>
    <label>Target Reuniones</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>