force-app/main/default/objects/auara_UmbralesCompromiso__c/fields/auara_TargetVisitas__c.field-meta.xml
<CustomField>
    <fullName>auara_TargetVisitas__c</fullName>
    <label>Target Visitas</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>